tests/paczka1/small_fuzzy/25741100.err
Error in line 4: CYXt S563 50,5
Error in line 2: U0bvVq0l6p A61 53,8
Error in line 12: y3bkVPT A526 59,6
